--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>io.datajek</groupId>
+	<groupId></groupId>
 	<artifactId>money-transfer-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tennis-player-rest</name>
